--- a/README.html
+++ b/README.html
@@ -47,7 +47,29 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="mediation-moderation-and-conditional-process-analysis" class="level1">
 <h1>Mediation, Moderation, and Conditional Process Analysis</h1>
-<p>Mediation, Moderation, and Conditional Process Analysis with R and the Hayes’ PROCESS software</p>
+<p>This repository contains materials for my data analysis seminar focuses on linear regression analysis to explore questions about mediated and moderated effects. This material was first prepared for the Advanced Data Analysis class of the Master in Communication Science of the University of Vienna and can be accessed at this link: <a href="https://nicolarighetti.github.io/mediation-moderation-and-conditional-process-analysis-with-r/">Mediation, Moderation, and Conditional Process Analysis with R</a>.</p>
+<p>Computer applications will focus on R statistical language, the Rstudio environment (<a href="https://www.rstudio.com/">https://www.rstudio.com),</a>,/)&nbsp;and the PROCESS software by Andrew F. Hayes (<a href="http://processmacro.org/">http://processmacro.org).</a>./)</p>
+<p>The course is subdivided into the following learning units:</p>
+<ul>
+<li><p>The introductory part of the course is dedicated to a brief review of the basic principles of linear regression and the setup of R and PROCESS for statistical analysis. We discuss multiple regression analysis and its principles to understand how to fit, visualize, interpret, and evaluate multiple regression models in R. We also get a first overview of mediation, moderation, and conditional process models.</p></li>
+<li><p>We then focus on mediation analysis, seeing how to fit, visualize, interpret, and evaluate mediation models using PROCESS in the R environment.</p></li>
+<li><p>The following learning unit is dedicated to moderation analysis and explaining how to fit, visualize, interpret, and evaluate moderation models using PROCESS in the R environment.</p></li>
+<li><p>The final learning unit is an overview of conditional process analysis and aims at explaining how to fit, visualize, interpret, and evaluate conditional process models using PROCESS in the R environment.</p></li>
+</ul>
+<p>The last part of the course is dedicated to the project work.</p>
+<p>By the end of this course, participants are expected to know how:</p>
+<ul>
+<li><p>Run and interpret the results of linear regression, moderation, mediation, and conditional process models.</p></li>
+<li><p>Test competing theories of mechanisms statistically through the comparison of indirect effects in models with multiple mediators.</p></li>
+<li><p>Visualize and probe interactions in regression models to interpret interaction effects appropriately.</p></li>
+<li><p>Estimate the contingencies of mechanisms through the computation and inference about conditional indirect effects.</p></li>
+<li><p>Use the R language and PROCESS to run, visualize, and understand linear regression, moderation, mediation, and conditional process models.</p></li>
+</ul>
+<section id="reading-list" class="level3">
+<h3 class="anchored" data-anchor-id="reading-list">Reading list</h3>
+<p>The official handbook of the course is:</p>
+<p>Andrew F. Hayes. <a href="https://books.google.at/books?id=6uk7DwAAQBAJ&amp;printsec=frontcover&amp;dq=introduction+to+Mediation,+Moderation,+and+Conditional+Process+Analysis.+A+Regression-Based+Approach.+2018+second+edition&amp;hl=en&amp;sa=X&amp;ved=2ahUKEwjaoLSi6cf9AhV0S_EDHbngDwwQ6AF6BAgHEAI#v=onepage&amp;q=introduction%20to%20Mediation%2C%20Moderation%2C%20and%20Conditional%20Process%20Analysis.%20A%20Regression-Based%20Approach.%202018%20second%20edition&amp;f=false">Introduction to Mediation, Moderation, and Conditional Process Analysis. A Regression-Based Approach</a>. 2018. SECOND EDITION. THE GUILFORD PRESS, New York, London.</p>
+</section>
 </section>
 
 </main>
