--- a/README.html
+++ b/README.html
@@ -67,7 +67,7 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <section id="reading-list" class="level3">
 <h3 class="anchored" data-anchor-id="reading-list">Reading list</h3>
-<p>The official handbook of the course is:</p>
+<p>The handbook of the course and the primary source of most of the material here presented is:</p>
 <p>Andrew F. Hayes. <a href="https://books.google.at/books?id=6uk7DwAAQBAJ&amp;printsec=frontcover&amp;dq=introduction+to+Mediation,+Moderation,+and+Conditional+Process+Analysis.+A+Regression-Based+Approach.+2018+second+edition&amp;hl=en&amp;sa=X&amp;ved=2ahUKEwjaoLSi6cf9AhV0S_EDHbngDwwQ6AF6BAgHEAI#v=onepage&amp;q=introduction%20to%20Mediation%2C%20Moderation%2C%20and%20Conditional%20Process%20Analysis.%20A%20Regression-Based%20Approach.%202018%20second%20edition&amp;f=false">Introduction to Mediation, Moderation, and Conditional Process Analysis. A Regression-Based Approach</a>. 2018. SECOND EDITION. THE GUILFORD PRESS, New York, London.</p>
 </section>
 </section>
