--- a/README.html
+++ b/README.html
@@ -57,13 +57,13 @@ ul.task-list li input[type="checkbox"] {
 <li><p>The final learning unit is an overview of conditional process analysis and aims at explaining how to fit, visualize, interpret, and evaluate conditional process models using PROCESS in the R environment.</p></li>
 </ul>
 <p>The last part of the course is dedicated to the project work.</p>
-<p>By the end of this course, participants are expected to know how:</p>
+<p>By the conclusion of this course, students should be proficient in:</p>
 <ul>
-<li><p>Run and interpret the results of linear regression, moderation, mediation, and conditional process models.</p></li>
-<li><p>Test competing theories of mechanisms statistically through the comparison of indirect effects in models with multiple mediators.</p></li>
-<li><p>Visualize and probe interactions in regression models to interpret interaction effects appropriately.</p></li>
-<li><p>Estimate the contingencies of mechanisms through the computation and inference about conditional indirect effects.</p></li>
-<li><p>Use the R language and PROCESS to run, visualize, and understand linear regression, moderation, mediation, and conditional process models.</p></li>
+<li><p>Executing and comprehending the outcomes of linear regression, moderation, mediation, and conditional process models.</p></li>
+<li><p>Statistically testing competing theories of mechanisms through the evaluation of indirect effects in models that encompass multiple mediators.</p></li>
+<li><p>Representing and investigating interactions in regression models to accurately interpret interaction effects.</p></li>
+<li><p>Calculating and inferring about conditional indirect effects to estimate the contingencies of mechanisms.</p></li>
+<li><p>Utilizing the R language and PROCESS to conduct, depict, and comprehend linear regression, moderation, mediation, and conditional process models.</p></li>
 </ul>
 <section id="reading-list" class="level3">
 <h3 class="anchored" data-anchor-id="reading-list">Reading list</h3>
